# wain

./: .gitmodules  .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: ci.yaml
benches/: README.md  examples.rs  mandelbrot.rs  parsers.rs  validation.rs
examples/: Makefile  README.md  boyer_moore.c  boyer_moore.wasm  boyer_moore.wat  brainfxxk.c  brainfxxk.wasm  brainfxxk.wat  fib.c  fib.wasm  fib.wat  guessing_game.c  guessing_game.wasm  guessing_game.wat  mandelbrot.c  mandelbrot.wasm  mandelbrot.wat  mt19937.c  mt19937.wasm  mt19937.wat  n_queens.c  n_queens.wasm  n_queens.wat  nbodies.c  nbodies.wasm  nbodies.wat  pi.c  pi.wasm  pi.wat  primes.c  primes.wasm  primes.wat  quicksort.c  quicksort.wasm  quicksort.wat  sqrt.c  sqrt.wasm  sqrt.wat  y_combinator.cpp  y_combinator.wasm  (+1 more)
examples/api/: README.md  execute.rs  invoke.rs  wat.rs
examples/hello/: hello.c  hello.wasm  hello.wat  hello_global.c  hello_global.wasm  hello_global.wat  hello_indirect_call.c  hello_indirect_call.wasm  hello_indirect_call.wat  hello_struct.c  hello_struct.wasm  hello_struct.wat
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: binary_parser.rs  text_parser.rs  validation.rs
scripts/: build_wasm.sh  clippy.bash
spec-test/: Cargo.toml  README.md
spec-test/src/: crash.rs  error.rs  importer.rs  main.rs  parser.rs  runner.rs  wast.rs
spec-test/src/crash-tester/: main.rs
src/: lib.rs  main.rs
wain-ast/: Cargo.toml  README.md
wain-ast/src/: lib.rs  source.rs
wain-exec/: Cargo.toml  README.md
wain-exec/src/: cast.rs  conv.rs  error.rs  globals.rs  import.rs  lib.rs  machine.rs  memory.rs  runtime.rs  stack.rs  table.rs  trap.rs  value.rs
wain-syntax-binary/: Cargo.toml  LICENSE.txt  README.md
wain-syntax-binary/src/: error.rs  leb128.rs  lib.rs  parser.rs  source.rs
wain-syntax-text/: Cargo.toml  README.md
wain-syntax-text/src/: ast.rs  compose.rs  lexer.rs  lib.rs  parser.rs  source.rs  util.rs  wat2wasm.rs
wain-validate/: Cargo.toml  README.md
wain-validate/src/: error.rs  insn.rs  lib.rs
wain-wat/: Cargo.toml
wain-wat/src/: ast.rs  compose.rs  lexer.rs  lib.rs  parser.rs  wat.rs  wat2wasm.rs
