[package]
name = "wain"
version = "0.0.0"
authors = ["rhysd <lin90162@yahoo.co.jp>"]
edition = "2018"
description = "WebAssembly interpreter written in Safe Rust with zero dependency"
license = "MIT"
homepage = "https://github.com/rhysd/wain"
repository = "https://github.com/rhysd/wain"
readme = "README.md"
include = ["src/**/*.rs", "Cargo.toml"]
keywords = ["wasm", "webassembly", "interpreter", "wat"]
categories = ["wasm"]

[package.metadata.release]
no-dev-version = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wain"

[profile.release]
debug = 1
lto = true
panic = "abort"

[features]
default = ["binary", "text"]
binary = ["wain-syntax-binary"]
text = ["wain-syntax-text"]

[dependencies]
wain-ast = { path = "./wain-ast" }
wain-syntax-text = { path = "./wain-syntax-text", optional = true }
wain-syntax-binary = { path = "./wain-syntax-binary", optional = true }
wain-validate = { path = "./wain-validate" }
wain-exec = { path = "./wain-exec" }

[workspace]
members = [
    ".",
    "wain-ast",
    "wain-syntax-text",
    "wain-syntax-binary",
    "wain-validate",
    "wain-exec",
]

[badges]
maintenance = { status = "actively-developed" }
