[package]
name = "wain"
version = "0.1.5"
authors = ["rhysd <lin90162@yahoo.co.jp>"]
edition = "2018"
description = "WebAssembly interpreter written in Safe Rust with zero dependencies"
license = "MIT"
homepage = "https://github.com/rhysd/wain"
repository = "https://github.com/rhysd/wain"
readme = "README.md"
include = ["src/**/*.rs", "Cargo.toml", "examples/api/*.rs", "README.md"]
keywords = ["wasm", "webassembly", "interpreter", "wat"]
categories = ["wasm"]

[package.metadata.release]
no-dev-version = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wain"

[profile.release]
debug = 1
lto = true
panic = "abort"

[features]
default = ["binary", "text"]
binary = ["wain-syntax-binary"]
text = ["wain-syntax-text"]

[dependencies]
wain-ast = { path = "./wain-ast", version = "0.1" }
wain-syntax-text = { path = "./wain-syntax-text", version = "0.1", optional = true }
wain-syntax-binary = { path = "./wain-syntax-binary", version = "0.1", optional = true }
wain-validate = { path = "./wain-validate", version = "0.1" }
wain-exec = { path = "./wain-exec", version = "0.2" }

[workspace]
members = [
    ".",
    "wain-ast",
    "wain-syntax-text",
    "wain-syntax-binary",
    "wain-validate",
    "wain-exec",
    "spec-test",
]

[badges]
maintenance = { status = "actively-developed" }

[[bench]]
name = "examples"
path = "benches/examples.rs"

[[example]]
name = "execute"
path = "examples/api/execute.rs"

[[example]]
name = "wat"
path = "examples/api/wat.rs"

[[example]]
name = "invoke"
path = "examples/api/invoke.rs"
