[package]
name = "spec-test"
version = "0.1.0"
authors = ["rhysd <lin90162@yahoo.co.jp>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wain-ast = { path = "../wain-ast" }
wain-syntax-text = { path = "../wain-syntax-text" }
wain-syntax-binary = { path = "../wain-syntax-binary" }
wain-validate = { path = "../wain-validate" }
wain-exec = { path = "../wain-exec" }
