[package]
name = "spec-test"
version = "0.1.0"
authors = ["rhysd <lin90162@yahoo.co.jp>"]
edition = "2021"
publish = false
default-run = "spec-test"

[package.metadata.release]
consolidate-commits = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "spec-test"
path = "src/main.rs"

[[bin]]
name = "crash-tester"
path = "src/crash-tester/main.rs"

[dependencies]
wain-ast = { path = "../wain-ast" }
wain-syntax-text = { path = "../wain-syntax-text" }
wain-syntax-binary = { path = "../wain-syntax-binary" }
wain-validate = { path = "../wain-validate" }
wain-exec = { path = "../wain-exec" }
