[package]
name = "wain-exec"
version = "0.0.0"
authors = ["rhysd <lin90162@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wain-ast = { path = "../wain-ast", version = "0.0.0" }

[dev-dependencies]
wain-syntax-text = { path = "../wain-syntax-text", version = "0.0.0" }
wain-validate = { path = "../wain-validate", version = "0.0.0" }
