[package]
name = "wain-syntax-text"
version = "0.1.2"
authors = ["rhysd <lin90162@yahoo.co.jp>"]
edition = "2018"
description = "WebAssembly text format parser for wain project"
license = "MIT"
homepage = "https://github.com/rhysd/wain/tree/master/wain-syntax-text"
repository = "https://github.com/rhysd/wain"
readme = "README.md"
include = ["src/**/*.rs", "Cargo.toml", "README.md"]
keywords = ["wasm", "webassembly", "parser", "wat"]
categories = ["wasm", "parser-implementations"]

[package.metadata.release]
no-dev-version = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wain-ast = { path = "../wain-ast", version = "0.1" }

[badges]
maintenance = { status = "actively-developed" }
